update for today

--- a/abstract.tex
+++ b/abstract.tex
@@ -9,5 +9,5 @@ decisions. The numerous heterogeneous connected devices that exist throughout
 the IoT system creates new security and privacy concerns. \textcolor{red}{The numerous heterogeneous connected devices that exist throughout
 the IoT system creates new security and privacy paradigm which encompases various security issues from different areas of research .} .Some of these concerns can
 be overcome through data trust, transparency, and integrity, which can be
-achieved with data provenance. Data provenance also known as data lineage provides a history of transactions that occurs on a data object from the time it was created to its current state.Data Provenance has been explored in the areas of scientific computing and buisness to track the workflow processes,also in field of computer security for forensic analysis and intrusion detection.Data provenance has immense benefits that provenance offers in detecting and mitigating current and future malicious attacks.  \par In this dissertation, we explore provenance with a focus on IoT devices. We take an in depth look  in the creation, security and applications of provenance data to mitigating malicious attacks. We define our model constructs for representing IoT provenance data. We address the issue of provenancecollecting by creating a secure provenance aware system that collects provenance data in IoT devices.This system ensures trust and helps establish causality for decisions and actions taken by an IoT connected system. As a result of the amount of data that is generated from our data provenance system, there arises an issue memory space fillage.To address this issue, we propose a novel data pruning technique that provides optimal storage of provenance data contained in the IoT device.We conclude by looking at the applications of provenance data for security of malicious attacks. We focus on intrusion detection of malicious threats.We propose an intrusion detection system that detects malicous attaks based on provenance data for IoT devices. \textcolor{red}{The provenance generated from the IoT devices can provide valuable insights that could be used to detect and record abnormal patterns that might exist in a causal relationship between entities contained in the provenance chain.} This dissertation evaluates the data pruning algorithms for efficient storage of provenance data and evaluates a proof-of-concept in by creating an intrusion detection system for IoT devices.
+achieved with data provenance. Data provenance also known as data lineage provides a history of transactions that occurs on a data object from the time it was created to its current state.Data Provenance has been explored in the areas of scientific computing and buisness to track the workflow processes,also in field of computer security for forensic analysis and intrusion detection.Data provenance has immense benefits that provenance offers in detecting and mitigating current and future malicious attacks.  \par In this dissertation, we explore provenance with a focus on IoT devices. We take an in depth look  in the creation, security and applications of provenance data to mitigating malicious attacks. We define our model constructs for representing IoT provenance data. We address the issue of provenancecollecting by creating a secure provenance aware system that collects provenance data in IoT devices.This system ensures trust and helps establish causality for decisions and actions taken by an IoT connected system. As a result of the amount of data that is generated from our data provenance system, there arises an issue memory space fillage.Various provenance collection systems have been proposed for file system, database, and scientific workflow but little enphasis has been placed on provenance collection systems for low scale resource constrained devices.Tothis effect and to address the issue at hand, we propose a novel data pruning technique that provides optimal storage of provenance data contained in the IoT device.We conclude by looking at the applications of provenance data for security of malicious attacks. We focus on intrusion detection of malicious threats.We propose an intrusion detection system that detects malicous attaks based on provenance data for IoT devices. \textcolor{red}{The provenance generated from the IoT devices can provide valuable insights that could be used to detect and record abnormal patterns that might exist in a causal relationship between entities contained in the provenance chain.} This dissertation evaluates the data pruning algorithms for efficient storage of provenance data and evaluates a proof-of-concept in by creating an intrusion detection system for IoT devices.
 
