--- a/chapter6.tex
+++ b/chapter6.tex
@@ -6,11 +6,23 @@
 
 In this research, we present a provenance aware system that collects provenance information for IoT devices. This information can be beneficial in correcting and mitigating current and future attacks. We plan to continue refining our prototype, construct a model to guide data pruning, and create a taxonomy for secure data provenance in IoT systems that can inform our model.
 
-endeavor.
+
 
 \section{Future Work}
 \begin{itemize}
 
 \item Provenance collection raises privacy issues.How do we ensure that the vast amount of data collected is not invasive to the privacy of the use and also is not used as a tool to perform malicious attacks.
+
+\item Provenance Query: How do we query provenance data in order to interprete provenance information and make anaylsis of data collected.
+
+\item Provenance Versioning: Provenance version creates cycles. When a file is read or edited do we create a new instance of the file? Tracking all transformations that occurs on a data object in memeory constrained devices might lead to running out of storage space. A new instance of the provenance of that file should be created and included in the provenance data.
+
+\item Securing Provenance: Due to the great level of sensitivity that  provenance data entails, it is of utmost importance to ensure the confidentiality and integrity of provenance data stored on IoT devices while at rest or in transit. Proper encryption and authentication techniques need to be employed to ensure the confidentiality, integirty, and availability of provenance data.
+
+\item Provenance collection raises privacy issues.How do we ensure that the vast amount of data collected is not invasive to the privacy of the use and also is not used as a tool to perform malicious attacks.
+\end{itemize}
+
+\section{Research Contribution}
+
 
 \end{itemize}
