--- a/thesis.tex
+++ b/thesis.tex
@@ -95,6 +95,7 @@ Ebelechukwu Nwafor\\[0.2in]
 \StartBody
 
 \include{chapter1}         % Introductory Chapter
+\include{background}
 \include{chapter2}         % Chapter 2
 \include{chapter3}         % Chapter 3
 \include{chapter4}         % Chapter 4
