--- a/chapter3.tex
+++ b/chapter3.tex
@@ -65,7 +65,7 @@ To better emphasize the provenance-collection model, an example of a use case fo
 \begin{figure}[h]
 \begin{center}
 
-\includegraphics[width=3.0in]{usecase_prov.PNG}    
+\includegraphics[width=3.0in]{usecase.png}    
 \end{center}
 \caption{Provenance-model use case}
 \label{autom}
